AM_CFLAGS = -I$(top_srcdir)/inc

bin_PROGRAMS = action-replay

MAIN_SOURCES = \
    src/args.c \
    src/class.c \
    src/log.c \
    src/object.c \
    src/object_oriented_programming.c \
    src/player.c \
    src/recorder.c \
    src/stateful_object.c \
    src/stoppable.c \
    src/strndup.c \
    src/time.c \
    src/worker.c \
    src/workqueue.c

action_replay_SOURCES = \
    $(MAIN_SOURCES) \
    src/action-replay.c

